# solochain-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
node/: Cargo.toml
pallets/template/src/: lib.rs  weights.rs
pallets/travel-points/: Cargo.toml  README.md
pallets/travel-points/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
scripts/: benchmark.sh
